--- a/public/styles/About.css
+++ b/public/styles/About.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-section {
+main {
   position: fixed;
   top: 0;
   left: 0;
@@ -31,6 +31,23 @@ section {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 0;
-  padding-bottom: 65.25%;
+  padding-bottom: 56.25%;
   overflow: hidden;
+}
+
+.img_wrap {
+  --overflow: 40px;
+  position: absolute;
+  width: 100%;
+  height: calc(100% + (var(--overflow) * 2));
+  top: calc(-1 * var(--overflow));
+  background-repeat: no-repeat;
+  background-size: cover;
+  will-change: transform;
+}
+
+@media screen and (max-width: 760px) {
+  .container {
+    grid-template-columns: 100%;
+  }
 }
