--- a/public/styles/Home.css
+++ b/public/styles/Home.css
@@ -69,7 +69,7 @@ a {
 }
 
 .secondpage {
-  background: #cabaad;
+  background: #f7f7f9;
 }
 
 .thirdpage {
@@ -157,11 +157,11 @@ a {
 }
 
 .firstpage h1 {
-  color: #f4f4f4;
+  color: #f7f7f9;
 }
 
 .secondpage h1 {
-  color: #fdeabf;
+  color: #231f20;
   transform: scale(1.35);
 }
 
@@ -175,6 +175,7 @@ a {
   left: 32vw;
   bottom: 10vw;
   transform: scale(0);
+  border-radius: 2rem;
 }
 
 .bottom-sect {
