--- a/public/styles/Home.css
+++ b/public/styles/Home.css
@@ -23,6 +23,7 @@
   bottom: 50%;
   transform: translate(-50%, -50%);
   color: #ffffff;
+  text-align: center;
 }
 
 .logo {
@@ -32,6 +33,13 @@
   opacity: 0;
 }
 
+.logo.left {
+  position: absolute;
+  display: inline-block;
+  bottom: -20px;
+  opacity: 0;
+  right: 0.25px;
+}
 .logo.active {
   bottom: 0;
   opacity: 1;
@@ -198,6 +206,13 @@ a {
   bottom: 29vw;
 }
 
+.sub-heading {
+  position: absolute;
+  font-size: 5vw;
+  left: 26vw;
+  bottom: 29vw;
+}
+
 .firstpage h1 {
   color: #f7f7f9;
 }
@@ -235,8 +250,38 @@ a {
   z-index: 0;
 }
 
-@media screen and (max-width: 760px) {
-  body {
+@media screen and (max-width: 480px) {
+  .intro {
+    display: flex;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: #161616;
+    transition: 1s; 
+  }
+  .logo-header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    bottom: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-align: center;
+  }
+  .logo.left {
+    position: absolute;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+    right: 0.25px;
+  }
+  .logo {
+    padding: 10px;
+    margin-right: 10px;
   }
   .navbar {
     flex-direction: column;
@@ -262,7 +307,66 @@ a {
   .heading {
     font-size: 10vw;
     left: 10vw;
-    bottom: 35vw;
+    bottom: 105vw;
+    width: min-content;
+  }
+  .about {
+    width: 80vw;
+    left: 10vw;
+    bottom: 10vw;
+  }
+  .progress-line {
+    left: 10vw;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo.left {
+    position: absolute;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+    right: 0.25px;
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .thirdpage .title {
+    font-size: 4vw;
+  }
+  .thirdpage .imgs {
+    margin: 50px 0;
+  }
+  .img1 {
+    left: calc(50vw - 200px);
+    height: 250px;
+    width: 250px;
+  }
+  .img2 {
+    left: calc(50vw - 50px);
+    top: 16vw;
+    height: 200px;
+    width: 200px;
+  }
+  .heading {
+    font-size: 10vw;
+    left: 10vw;
+    bottom: 105vw;
+    top: 45vh;
+    width: min-content;
   }
   .about {
     width: 80vw;
