--- a/public/styles/Work.css
+++ b/public/styles/Work.css
@@ -1,39 +1,25 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  display: flexbox;
 }
 
-.header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/3.JPG);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+section.cards {
+  padding: 1rem;
+  flex: auto;
+  max-width: fit-content;
+  padding-left: 15px;
 }
 
-.soon {
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: #fff 1px solid;
-  padding: 20px;
-  box-shadow: #595959 0px 0px 10px;
-  border-radius: 5rem;
-}
-
-hr {
-  width: 50%;
-  margin: 30px auto;
-  border: 1px solid #fff;
-}
-
-p {
-  font-size: 20px;
-  margin-bottom: 30px;
-}
 header {
   border-radius: 26.5px;
   background-color: #000000;
@@ -49,6 +35,7 @@ header {
   right: 20px;
   z-index: 999;
 }
+
 
 .navbar {
   display: flex;
@@ -67,6 +54,73 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
+
+img.slide {
+  max-height: fit-content;
+  max-width: 50%;
+  object-fit: cover;
+  padding-left: 10rem;
+}
+
+.slider-wrapper {
+  margin: 1rem;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.slides-container {
+  height: 100%;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: scroll;
+  scroll-behavior: smooth;
+}
+.slide {
+  width: 100%;
+  height: 100%;
+  flex: 1 0 100%;
+}
+.slides-container {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+/* WebKit */
+.slides-container::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.slide-arrow {
+  position: absolute;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 4rem;
+  background-color: white;
+  border: none;
+  width: 2rem;
+  font-size: 3rem;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 100ms;
+}
+.slide-arrow:hover,
+.slide-arrow:focus {
+  opacity: 1;
+}
+#slide-arrow-prev {
+  left: 0;
+  padding-left: 0.25rem;
+  border-radius: 0 2rem 2rem 0;
+}
+#slide-arrow-next {
+  right: 0;
+  padding-left: 0.75rem;
+  border-radius: 2rem 0 0 2rem;
 }
 
 .intro {
@@ -89,19 +143,19 @@ a {
   transform: translate(-50%, -50%);
   color: #ffffff;
 }
-.logo.left {
-  position: absolute;
-  display: inline-block;
-  bottom: -20px;
-  opacity: 0;
-  right: 0.25px;
-}
 
 .logo {
   position: absolute;
   display: inline-block;
   bottom: -20px;
   opacity: 0;
+}
+
+.work-img {
+  width: 100vw;
+  height: 100vh;
+  border-radius: 10px;
+
 }
 
 .logo.active {
@@ -115,3 +169,11 @@ a {
   opacity: 0;
   transition: ease-in-out 0.5s;
 }
+
+
+@media screen and (max-width: 480px) {
+  .social-panel-container.visible {
+    transform: translateX(0px);
+  }
+}
+
